@@ -1,0 +1,7 @@
+# $Id: Makefile.am,v 1.6 2001/09/22 16:25:29 mej Exp $
+
+SUBDIRS = $(PACKAGE)
+
+include_HEADERS = libast.h
+
+EXTRA_DIST = libast_internal.h
