@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 1997-2001, Michael Jennings
+ * Copyright (C) 1997-2002, Michael Jennings
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to
@@ -69,6 +69,8 @@
 #  include <Imlib2.h>
 # endif
 #endif
+
+#include <libast/types.h>
 
 /******************************* GENERIC GOOP *********************************/
 #ifndef TRUE
